# redv-sifive-riscv-fe310-soc-rs

./: Cargo.toml  Embed.toml  LICENSE  README.md  build.rs  memory.x
.github/workflows/: ci.yml
examples/: blinky.rs
src/: lib.rs
