[package]
name = "redv-sifive-riscv-fe310-soc-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = {version = "0.10.1", features = ["critical-section-single-hart"]}
riscv-rt = "0.11.0"
e310x = { version = "0.11.0", features = ["rt", "critical-section"] }
rtt-target = { version = "0.4.0"}

[dev-dependencies]
